--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,5 +3,42 @@
 * {
     padding: 0px;
     margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+    height: 100vh;
+    width: 100vw;
+    background-color: black;
+}
+
+
+body {
+
+    background-image: url(../imagens/fundo-madeira.jpg);
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+}
+
+main {
+    height: 100vh;
+    position: relative;
+
+}
+
+section#telefone {
+     height: 627px;
+     width: 310px;
+
+
+
+     position: absolute;
+     left: 50%;
+     top: 50%;
+     transform: translate(-50%,-50%);
+
+     background-image: url(../imagens/frame-iphone.png);
+     background-repeat: no-repeat;
+
+}
