--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,3 +42,14 @@ section#telefone {
      background-repeat: no-repeat;
 
 }
+
+iframe#tela {
+
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 268px;
+    height: 471px ;
+
+
+}
